--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -394,17 +394,17 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="customProvider" stretch="1,0,0,0,0">
+        <layout class="QHBoxLayout" name="provider" stretch="1,0,0,0,0">
          <item>
-          <widget class="QComboBox" name="customProviderCombo"/>
+          <widget class="QComboBox" name="providerCombo"/>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="customProviderControls">
+          <layout class="QHBoxLayout" name="providerControls">
            <property name="spacing">
             <number>0</number>
            </property>
            <item>
-            <widget class="QPushButton" name="addCustomProvider">
+            <widget class="QPushButton" name="addProvider">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -429,7 +429,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="removeCustomProvider">
+            <widget class="QPushButton" name="removeProvider">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -454,7 +454,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="editCustomProvider">
+            <widget class="QPushButton" name="editProvider">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -510,7 +510,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QgsCollapsibleGroupBox" name="customProviderAuthGroup">
+        <widget class="QgsCollapsibleGroupBox" name="providerAuthGroup">
          <property name="title">
           <string>Credentials</string>
          </property>
@@ -528,30 +528,30 @@
          </property>
          <layout class="QGridLayout" name="layourCustomProviderAuthGroup" columnstretch="1,0">
           <item row="0" column="0">
-           <layout class="QFormLayout" name="customProviderAuth">
+           <layout class="QFormLayout" name="providerAuth">
             <item row="0" column="0">
-             <widget class="QLabel" name="labelCustomProviderLogin">
+             <widget class="QLabel" name="labelProviderUsername">
               <property name="text">
                <string>Login:</string>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
-             <widget class="QLineEdit" name="customProviderLogin">
+             <widget class="QLineEdit" name="providerUsername">
               <property name="text">
                <string/>
               </property>
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QLabel" name="labelCustomProviderPassword">
+             <widget class="QLabel" name="labelProviderPassword">
               <property name="text">
                <string>Password:</string>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QgsPasswordLineEdit" name="customProviderPassword">
+             <widget class="QgsPasswordLineEdit" name="providerPassword">
               <property name="text">
                <string/>
               </property>
@@ -560,7 +560,7 @@
            </layout>
           </item>
           <item row="0" column="1">
-           <widget class="QCheckBox" name="customProviderSaveAuth">
+           <widget class="QCheckBox" name="providerSaveAuth">
             <property name="text">
              <string>Save Login/Password</string>
             </property>
@@ -649,14 +649,6 @@
             </attribute>
             <column>
              <property name="text">
-              <string>Source Unit</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
               <string>Product Type</string>
              </property>
              <property name="textAlignment">
@@ -674,6 +666,14 @@
             <column>
              <property name="text">
               <string>Cloud Cover</string>
+             </property>
+             <property name="textAlignment">
+              <set>AlignCenter</set>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>OffNadirAngle</string>
              </property>
              <property name="textAlignment">
               <set>AlignCenter</set>
@@ -759,7 +759,7 @@
        <item>
         <widget class="QLabel" name="help">
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h3 style=&quot; margin-top:30px; margin-bottom:30px; margin-left:30px; margin-right:30px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span&gt;Mapflow&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-install-the-plugin&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Installation guide&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;User Interface walkthrough&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-process-your-own-imagery&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to process your own image&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to use a different imagery tileset&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect to Maxar SercureWatch&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;h3 style=&quot; margin-top:30px; margin-bottom:30px; margin-left:30px; margin-right:30px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span&gt;Mapflow&lt;/span&gt;&lt;/h3&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#user-interface&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;User Interface walkthrough&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-process-your-own-imagery&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to process your own image&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-use-other-imagery-services&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to use a different imagery tileset&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect to Maxar SercureWatch&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -799,7 +799,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>customProviderCombo</sender>
+   <sender>providerCombo</sender>
    <signal>currentTextChanged(QString)</signal>
    <receiver>rasterCombo</receiver>
    <slot>setCurrentText(QString)</slot>
@@ -817,7 +817,7 @@
   <connection>
    <sender>rasterCombo</sender>
    <signal>currentTextChanged(QString)</signal>
-   <receiver>customProviderCombo</receiver>
+   <receiver>providerCombo</receiver>
    <slot>setCurrentText(QString)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -827,6 +827,22 @@
     <hint type="destinationlabel">
      <x>139</x>
      <y>104</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>logoutButton</sender>
+   <signal>clicked()</signal>
+   <receiver>MainDialog</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>64</x>
+     <y>548</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>324</x>
+     <y>294</y>
     </hint>
    </hints>
   </connection>
