--- a/mapflow/static/ui/login_dialog.ui
+++ b/mapflow/static/ui/login_dialog.ui
@@ -43,6 +43,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QgsPasswordLineEdit" name="token">
+       <property name="maxLength">
+        <number>100</number>
+       </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
        </property>
