--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -518,6 +518,9 @@
           <bool>true</bool>
          </property>
          <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="checked">
           <bool>false</bool>
          </property>
          <property name="collapsed">
@@ -525,6 +528,9 @@
          </property>
          <property name="saveCollapsedState">
           <bool>true</bool>
+         </property>
+         <property name="saveCheckedState">
+          <bool>false</bool>
          </property>
          <layout class="QGridLayout" name="layourCustomProviderAuthGroup" columnstretch="1,0">
           <item row="0" column="0">
