--- a/mapflow/static/ui/connect_id_dialog.ui
+++ b/mapflow/static/ui/connect_id_dialog.ui
@@ -39,14 +39,7 @@
     <number>7</number>
    </property>
    <item row="0" column="0">
-    <widget class="QLineEdit" name="connectId">
-     <property name="inputMask">
-      <string notr="true">HHHHHHHH-HHHH-HHHH-HHHH-HHHHHHHHHHHH</string>
-     </property>
-     <property name="maxLength">
-      <number>36</number>
-     </property>
-    </widget>
+    <widget class="QLineEdit" name="connectId"/>
    </item>
    <item row="2" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
