--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="movable">
       <bool>true</bool>
@@ -637,7 +637,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QTableWidget" name="maxarMetadataTable">
+           <widget class="QTableWidget" name="metadataTable">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
