--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <property name="movable">
       <bool>true</bool>
@@ -504,7 +504,7 @@
             <number>21</number>
            </property>
            <property name="value">
-            <number>14</number>
+            <number>12</number>
            </property>
           </widget>
          </item>
@@ -584,14 +584,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="maxar">
+        <widget class="QGroupBox" name="metadata">
          <property name="title">
-          <string>Maxar SecureWatch Metadata</string>
+          <string>Provider Metadata</string>
          </property>
          <property name="checked">
           <bool>false</bool>
          </property>
-         <layout class="QVBoxLayout" name="layoutMaxar">
+         <layout class="QGridLayout" name="gridLayout_2">
           <property name="leftMargin">
            <number>0</number>
           </property>
@@ -604,40 +604,163 @@
           <property name="bottomMargin">
            <number>0</number>
           </property>
-          <item>
-           <layout class="QHBoxLayout" name="maxarOptions" stretch="0,1,0">
-            <item>
-             <widget class="QLabel" name="labelMaxarAoi">
-              <property name="text">
-               <string>Area:</string>
-              </property>
-             </widget>
+          <item row="0" column="0">
+           <layout class="QGridLayout" name="gridLayout">
+            <item row="0" column="0">
+             <layout class="QHBoxLayout" name="layoutMetadataAoi" stretch="1,0">
+              <item>
+               <layout class="QFormLayout" name="formLayout">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="labelMaxarAoi">
+                  <property name="text">
+                   <string>Area:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="QgsMapLayerComboBox" name="maxarAoiCombo">
+                  <property name="showCrs">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="metadataUseCanvasExtent">
+                <property name="text">
+                 <string>Use canvas extent</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
-            <item>
-             <widget class="QgsMapLayerComboBox" name="maxarAoiCombo">
-              <property name="showCrs">
-               <bool>true</bool>
-              </property>
-             </widget>
+            <item row="1" column="0">
+             <layout class="QHBoxLayout" name="layoutDatetime" stretch="0,1,0,1">
+              <item>
+               <widget class="QLabel" name="labelFrom">
+                <property name="text">
+                 <string>From</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QgsDateTimeEdit" name="metadataFrom">
+                <property name="maximumDate">
+                 <date>
+                  <year>2030</year>
+                  <month>12</month>
+                  <day>31</day>
+                 </date>
+                </property>
+                <property name="minimumDate">
+                 <date>
+                  <year>1970</year>
+                  <month>1</month>
+                  <day>1</day>
+                 </date>
+                </property>
+                <property name="displayFormat">
+                 <string>yyyy-MM-dd HH:mm</string>
+                </property>
+                <property name="allowNull">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="labelTo">
+                <property name="text">
+                 <string>To</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QgsDateTimeEdit" name="metadataTo">
+                <property name="maximumDate">
+                 <date>
+                  <year>2030</year>
+                  <month>12</month>
+                  <day>31</day>
+                 </date>
+                </property>
+                <property name="minimumDate">
+                 <date>
+                  <year>1970</year>
+                  <month>1</month>
+                  <day>1</day>
+                 </date>
+                </property>
+                <property name="displayFormat">
+                 <string>yyyy-MM-dd HH:mm</string>
+                </property>
+                <property name="allowNull">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
-            <item>
-             <widget class="QPushButton" name="getMetadata">
-              <property name="text">
-               <string>Get metadata</string>
-              </property>
-             </widget>
+            <item row="2" column="0">
+             <layout class="QHBoxLayout" name="layoutCloudCover">
+              <item>
+               <widget class="QLabel" name="labelMaxCloudCover">
+                <property name="text">
+                 <string>Cloud cover up to:</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QSlider" name="maxCloudCover">
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>100</number>
+                </property>
+                <property name="value">
+                 <number>30</number>
+                </property>
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="tickPosition">
+                 <enum>QSlider::TicksBelow</enum>
+                </property>
+                <property name="tickInterval">
+                 <number>10</number>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QSpinBox" name="maxCloudCoverSpinBox">
+                <property name="suffix">
+                 <string>%</string>
+                </property>
+                <property name="minimum">
+                 <number>1</number>
+                </property>
+                <property name="maximum">
+                 <number>100</number>
+                </property>
+                <property name="value">
+                 <number>30</number>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
-          <item>
-           <widget class="QCheckBox" name="metadataUseCanvasExtent">
+          <item row="1" column="0">
+           <widget class="QPushButton" name="getMetadata">
             <property name="text">
-             <string>Use canvas extent</string>
+             <string>Get metadata</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QTableWidget" name="maxarMetadataTable">
+          <item row="2" column="0">
+           <widget class="QTableWidget" name="metadataTable">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
             </property>
@@ -668,58 +791,10 @@
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
             </attribute>
-            <column>
-             <property name="text">
-              <string>Product Type</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Band Order</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Cloud Cover</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>OffNadirAngle</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Date</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string notr="true">ID</string>
-             </property>
-             <property name="textAlignment">
-              <set>AlignCenter</set>
-             </property>
-            </column>
            </widget>
           </item>
-          <item>
-           <layout class="QHBoxLayout" name="maxarHeader" stretch="0,1,0">
+          <item row="3" column="0">
+           <layout class="QHBoxLayout" name="providerFooter" stretch="0,1,0">
             <property name="spacing">
              <number>20</number>
             </property>
@@ -734,7 +809,7 @@
              </widget>
             </item>
             <item>
-             <spacer name="spacerMaxarHeader">
+             <spacer name="spacerFooter">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -802,6 +877,11 @@
    <extends>QGroupBox</extends>
    <header>qgscollapsiblegroupbox.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QgsDateTimeEdit</class>
+   <extends>QDateTimeEdit</extends>
+   <header>qgsdatetimeedit.h</header>
   </customwidget>
   <customwidget>
    <class>QgsMapLayerComboBox</class>
@@ -874,12 +954,44 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>149</x>
-     <y>245</y>
+     <x>579</x>
+     <y>227</y>
     </hint>
     <hint type="destinationlabel">
      <x>242</x>
      <y>220</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>maxCloudCover</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maxCloudCoverSpinBox</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>472</x>
+     <y>284</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>575</x>
+     <y>286</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>maxCloudCoverSpinBox</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maxCloudCover</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>564</x>
+     <y>304</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>446</x>
+     <y>300</y>
     </hint>
    </hints>
   </connection>
