--- a/mapflow/static/ui/sentinel_hub_token_dialog.ui
+++ b/mapflow/static/ui/sentinel_hub_token_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ImageIdDialog</class>
- <widget class="QDialog" name="ImageIdDialog">
+ <class>SentinelHubTokenDialog</class>
+ <widget class="QDialog" name="SentinelHubTokenDialog">
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>106</height>
+    <width>400</width>
+    <height>90</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,31 +21,35 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>394</width>
-    <height>106</height>
+    <width>400</width>
+    <height>90</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>394</width>
-    <height>106</height>
+    <width>400</width>
+    <height>90</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string notr="true">Sentinel Image ID</string>
+   <string notr="true">Sentinel Hub Access Token</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="bottomMargin">
-    <number>7</number>
-   </property>
    <item row="0" column="0">
-    <widget class="QLineEdit" name="imageId">
-     <property name="maxLength">
-      <number>100</number>
-     </property>
-    </widget>
+    <layout class="QFormLayout" name="form">
+     <item row="0" column="0">
+      <widget class="QLabel" name="labelToken">
+       <property name="text">
+        <string>Token</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="token"/>
+     </item>
+    </layout>
    </item>
-   <item row="2" column="0">
+   <item row="1" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -59,7 +63,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>ImageIdDialog</receiver>
+   <receiver>SentinelHubTokenDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -75,7 +79,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>ImageIdDialog</receiver>
+   <receiver>SentinelHubTokenDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
