--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>589</height>
+    <height>592</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <property name="movable">
       <bool>true</bool>
@@ -402,7 +402,7 @@
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="provider" stretch="1,0,0,0,0">
+        <layout class="QHBoxLayout" name="provider" stretch="1,0,0,2,0,0,0">
          <item>
           <widget class="QComboBox" name="providerCombo"/>
          </item>
@@ -487,6 +487,20 @@
             </widget>
            </item>
           </layout>
+         </item>
+         <item>
+          <widget class="QLabel" name="labelImageId">
+           <property name="text">
+            <string>Image ID:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="imageId">
+           <property name="placeholderText">
+            <string>Select in the table below or paste here</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QLabel" name="labelZoomLimit">
@@ -646,6 +660,13 @@
               </item>
               <item>
                <widget class="QgsDateTimeEdit" name="metadataFrom">
+                <property name="date">
+                 <date>
+                  <year>2020</year>
+                  <month>12</month>
+                  <day>17</day>
+                 </date>
+                </property>
                 <property name="maximumDate">
                  <date>
                   <year>2030</year>
@@ -792,46 +813,6 @@
              <bool>true</bool>
             </attribute>
            </widget>
-          </item>
-          <item row="3" column="0">
-           <layout class="QHBoxLayout" name="providerFooter" stretch="0,1,0">
-            <property name="spacing">
-             <number>20</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="howToConnect">
-              <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://docs.mapflow.ai/api/qgis_mapflow#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect?&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-              <property name="openExternalLinks">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="spacerFooter">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>5</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QLabel" name="termsOfService">
-              <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://www.maxar.com/legal/securewatch-license&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Terms of Service&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-              <property name="openExternalLinks">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-           </layout>
           </item>
          </layout>
         </widget>
