--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -290,7 +290,7 @@
          </column>
          <column>
           <property name="text">
-           <string>Progress</string>
+           <string>Progress %</string>
           </property>
           <property name="textAlignment">
            <set>AlignCenter</set>
