--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -681,6 +681,9 @@
                 <property name="value">
                  <number>50</number>
                 </property>
+                <property name="tracking">
+                 <bool>false</bool>
+                </property>
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -805,6 +808,9 @@
                 </property>
                 <property name="value">
                  <number>30</number>
+                </property>
+                <property name="tracking">
+                 <bool>false</bool>
                 </property>
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
